--- a/05-SearXNG.org
+++ b/05-SearXNG.org
@@ -1,4 +1,4 @@
-#+title: Project Router Addon - Part 2 - Zusammenspiel Pi-Hole und Nginx Proxy Manager
+#+title: Project Router Addon - SearXNG als private Meta Suchmaschine
 #+author: Michael Bäcker
 #+date: 2025-05-16
 #+description: Wie bringen wir einen Mehrwert in unser Heimnetzwerk
